# discord-bot

./: .env_example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  ec2-setup.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
bot/: .env_example  main.py
bot/cache/: sneakers-asset-cache.json
bot/src/: consts.py  discord_bot.py  kong.py  opensea.py  util.py
bot/util/: consts.py  kong.py  opensea.py  util.py
