[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["naz <naz@rl.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
discord = "1.7.3"
python-dotenv = "0.19"
Pillow = "8.4.0"
requests = "^2.28.1"
jokeapi = "^1.0.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pandas = "^1.4.3"
numpy = "^1.23.0"
mypy = "^0.961"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
